--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
 # this is a list of all contributors for this project
-
+Oyedele Bolaji <oyedelebolaji84@gmail.com>
 Akeh Emmanuel Unimke<wilfreddbest1@gmail.com>
